CSS fixes for admin page on mobile. Fixed reporting replies not working

--- a/src/webfiles/web/css/web.css
+++ b/src/webfiles/web/css/web.css
@@ -599,4 +599,17 @@ iframe {
         width:60px;
         height:60px
     }
+    list-content-with-icon-and-text li.reports > * {
+        width: 100%;
+        overflow: clip;
+    }
+
+    li.reports .posts-wrapper {
+        margin-left: -1em;
+    }
+
+    li.reports .hover {
+        width: auto;
+        padding: 0.5em 0.25em;
+    }
 }
